--- a/.github/conda/meta.yaml
+++ b/.github/conda/meta.yaml
@@ -20,17 +20,16 @@ requirements:
     - filelock
     - numpy >=1.17
     - pyarrow >=8.0.0
-    - pyarrow-hotfix
     - dill >=0.3.0,<0.3.8
     - pandas
     - requests >=2.19.0
     - tqdm >=4.62.1
-    - xxhash
+    - python-xxhash
     - multiprocess
     - fsspec[http] >=2023.1.0,<=2023.10.0
     - packaging
     - pyyaml >=5.1
-    - scikit-learn >=1.4.0
+    - scikit-learn
 test:
   imports:
     - biofit
