--- a/.github/workflows/conda-release.yml
+++ b/.github/workflows/conda-release.yml
@@ -1,8 +1,7 @@
 name: Conda - Build
 on:
   push:
-    tags:
-      - "[0-9]+.[0-9]+.[0-9]+*"
+    branch: "conda-0.0.1-release"
 env:
   ANACONDA_API_TOKEN: ${{ secrets.ANACONDA_API_TOKEN }}
 jobs:
